// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components/Form/AngleInput Basic smoke-test 1`] = `
<div class="cmpui_angle-input__root"
     style="width: 64px; height: 64px;"
>
  <svg width="64"
       height="64"
       viewbox="0 0 64 64"
  >
    <circle cx="32"
            cy="32"
            r="31"
            stroke="var(--cmpui-border-color)"
            fill="none"
            stroke-width="1"
    >
    </circle>
  </svg>
  <svg width="5"
       height="1"
       viewbox="0 0 5 1"
       style="position: absolute; overflow: visible; pointer-events: none; left: 55.5px; top: 31.5px;"
  >
    <line x1="0.5"
          y1="0.5"
          x2="4.5"
          y2="0.5"
          stroke-width="1"
          stroke="var(--cmpui-border-color)"
    >
    </line>
  </svg>
  <svg width="4.464101615137757"
       height="3"
       viewbox="0 0 4.464101615137757 3"
       style="position: absolute; overflow: visible; pointer-events: none; left: 52.2846px; top: 43.5px;"
  >
    <line x1="0.5"
          y1="0.5"
          x2="3.964101615137757"
          y2="2.5"
          stroke-width="1"
          stroke="var(--cmpui-border-color)"
    >
    </line>
  </svg>
  <svg width="3"
       height="4.46410161513775"
       viewbox="0 0 3 4.46410161513775"
       style="position: absolute; overflow: visible; pointer-events: none; left: 43.5px; top: 52.2846px;"
  >
    <line x1="0.5"
          y1="0.5"
          x2="2.5"
          y2="3.96410161513775"
          stroke-width="1"
          stroke="var(--cmpui-border-color)"
    >
    </line>
  </svg>
  <svg width="1"
       height="5"
       viewbox="0 0 1 5"
       style="position: absolute; overflow: visible; pointer-events: none; left: 31.5px; top: 55.5px;"
  >
    <line x1="0.5"
          y1="0.5"
          x2="0.5"
          y2="4.5"
          stroke-width="1"
          stroke="var(--cmpui-border-color)"
    >
    </line>
  </svg>
  <svg width="3"
       height="4.464101615137757"
       viewbox="0 0 3 4.464101615137757"
       style="position: absolute; overflow: visible; pointer-events: none; left: 17.5px; top: 52.2846px;"
  >
    <line x1="2.5"
          y1="0.5"
          x2="0.5"
          y2="3.964101615137757"
          stroke-width="1"
          stroke="var(--cmpui-border-color)"
    >
    </line>
  </svg>
  <svg width="4.464101615137757"
       height="3"
       viewbox="0 0 4.464101615137757 3"
       style="position: absolute; overflow: visible; pointer-events: none; left: 7.25129px; top: 43.5px;"
  >
    <line x1="3.964101615137757"
          y1="0.5"
          x2="0.5"
          y2="2.5"
          stroke-width="1"
          stroke="var(--cmpui-border-color)"
    >
    </line>
  </svg>
  <svg width="5"
       height="1"
       viewbox="0 0 5 1"
       style="position: absolute; overflow: visible; pointer-events: none; left: 3.5px; top: 31.5px;"
  >
    <line x1="4.5"
          y1="0.5"
          x2="0.5"
          y2="0.5"
          stroke-width="1"
          stroke="var(--cmpui-border-color)"
    >
    </line>
  </svg>
  <svg width="4.4641016151377535"
       height="3"
       viewbox="0 0 4.4641016151377535 3"
       style="position: absolute; overflow: visible; pointer-events: none; left: 7.25129px; top: 17.5px;"
  >
    <line x1="3.9641016151377535"
          y1="2.5"
          x2="0.5"
          y2="0.5"
          stroke-width="1"
          stroke="var(--cmpui-border-color)"
    >
    </line>
  </svg>
  <svg width="3.0000000000000036"
       height="4.4641016151377535"
       viewbox="0 0 3.0000000000000036 4.4641016151377535"
       style="position: absolute; overflow: visible; pointer-events: none; left: 17.5px; top: 7.25129px;"
  >
    <line x1="2.5000000000000036"
          y1="3.9641016151377535"
          x2="0.5"
          y2="0.5"
          stroke-width="1"
          stroke="var(--cmpui-border-color)"
    >
    </line>
  </svg>
  <svg width="1"
       height="5"
       viewbox="0 0 1 5"
       style="position: absolute; overflow: visible; pointer-events: none; left: 31.5px; top: 3.5px;"
  >
    <line x1="0.5"
          y1="4.5"
          x2="0.5"
          y2="0.5"
          stroke-width="1"
          stroke="var(--cmpui-border-color)"
    >
    </line>
  </svg>
  <svg width="3"
       height="4.4641016151377535"
       viewbox="0 0 3 4.4641016151377535"
       style="position: absolute; overflow: visible; pointer-events: none; left: 43.5px; top: 7.25129px;"
  >
    <line x1="0.5"
          y1="3.9641016151377535"
          x2="2.5"
          y2="0.5"
          stroke-width="1"
          stroke="var(--cmpui-border-color)"
    >
    </line>
  </svg>
  <svg width="4.464101615137757"
       height="3.0000000000000036"
       viewbox="0 0 4.464101615137757 3.0000000000000036"
       style="position: absolute; overflow: visible; pointer-events: none; left: 52.2846px; top: 17.5px;"
  >
    <line x1="0.5"
          y1="2.5000000000000036"
          x2="3.964101615137757"
          y2="0.5"
          stroke-width="1"
          stroke="var(--cmpui-border-color)"
    >
    </line>
  </svg>
  <svg width="31"
       height="1"
       viewbox="0 0 31 1"
       style="position: absolute; overflow: visible; pointer-events: none; left: 31.5px; top: 31.5px;"
  >
    <line x1="0.5"
          y1="0.5"
          x2="30.5"
          y2="0.5"
          stroke-width="1"
          stroke="var(--cmpui-primary-color)"
    >
    </line>
  </svg>
  <div x="62"
       y="32"
       class="cmpui_circle__root cmpui_angle-input__nob"
       style="--cmpui-circle-nob-radius: 8px; --cmpui-circle-nob-stroke-width: 0px; left: 54px; top: 24px;"
  >
  </div>
  <div x="32"
       y="32"
       class="cmpui_circle__root"
       style="--cmpui-circle-nob-fill: var(--cmpui-primary-color); --cmpui-circle-nob-radius: 2px; --cmpui-circle-nob-stroke-color: transparent; --cmpui-circle-nob-stroke-width: 0px; border: 0px solid transparent; left: 30px; top: 30px;"
  >
  </div>
</div>
`;

exports[`Components/Form/AngleInput Size smoke-test 1`] = `
<div class="cmpui_angle-input__root"
     style="width: 128px; height: 128px;"
>
  <svg width="128"
       height="128"
       viewbox="0 0 128 128"
  >
    <circle cx="64"
            cy="64"
            r="63"
            stroke="var(--cmpui-border-color)"
            fill="none"
            stroke-width="1"
    >
    </circle>
  </svg>
  <svg width="5"
       height="1"
       viewbox="0 0 5 1"
       style="position: absolute; overflow: visible; pointer-events: none; left: 119.5px; top: 63.5px;"
  >
    <line x1="0.5"
          y1="0.5"
          x2="4.5"
          y2="0.5"
          stroke-width="1"
          stroke="var(--cmpui-border-color)"
    >
    </line>
  </svg>
  <svg width="4.46410161513775"
       height="3"
       viewbox="0 0 4.46410161513775 3"
       style="position: absolute; overflow: visible; pointer-events: none; left: 111.997px; top: 91.5px;"
  >
    <line x1="0.5"
          y1="0.5"
          x2="3.96410161513775"
          y2="2.5"
          stroke-width="1"
          stroke="var(--cmpui-border-color)"
    >
    </line>
  </svg>
  <svg width="3"
       height="4.464101615137764"
       viewbox="0 0 3 4.464101615137764"
       style="position: absolute; overflow: visible; pointer-events: none; left: 91.5px; top: 111.997px;"
  >
    <line x1="0.5"
          y1="0.5"
          x2="2.5"
          y2="3.964101615137764"
          stroke-width="1"
          stroke="var(--cmpui-border-color)"
    >
    </line>
  </svg>
  <svg width="1"
       height="5"
       viewbox="0 0 1 5"
       style="position: absolute; overflow: visible; pointer-events: none; left: 63.5px; top: 119.5px;"
  >
    <line x1="0.5"
          y1="0.5"
          x2="0.5"
          y2="4.5"
          stroke-width="1"
          stroke="var(--cmpui-border-color)"
    >
    </line>
  </svg>
  <svg width="3"
       height="4.46410161513775"
       viewbox="0 0 3 4.46410161513775"
       style="position: absolute; overflow: visible; pointer-events: none; left: 33.5px; top: 111.997px;"
  >
    <line x1="2.5"
          y1="0.5"
          x2="0.5"
          y2="3.96410161513775"
          stroke-width="1"
          stroke="var(--cmpui-border-color)"
    >
    </line>
  </svg>
  <svg width="4.46410161513775"
       height="3"
       viewbox="0 0 4.46410161513775 3"
       style="position: absolute; overflow: visible; pointer-events: none; left: 11.5385px; top: 91.5px;"
  >
    <line x1="3.96410161513775"
          y1="0.5"
          x2="0.5"
          y2="2.5"
          stroke-width="1"
          stroke="var(--cmpui-border-color)"
    >
    </line>
  </svg>
  <svg width="5"
       height="1.0000000000000142"
       viewbox="0 0 5 1.0000000000000142"
       style="position: absolute; overflow: visible; pointer-events: none; left: 3.5px; top: 63.5px;"
  >
    <line x1="4.5"
          y1="0.5"
          x2="0.5"
          y2="0.5000000000000142"
          stroke-width="1"
          stroke="var(--cmpui-border-color)"
    >
    </line>
  </svg>
  <svg width="4.464101615137757"
       height="3"
       viewbox="0 0 4.464101615137757 3"
       style="position: absolute; overflow: visible; pointer-events: none; left: 11.5385px; top: 33.5px;"
  >
    <line x1="3.964101615137757"
          y1="2.5"
          x2="0.5"
          y2="0.5"
          stroke-width="1"
          stroke="var(--cmpui-border-color)"
    >
    </line>
  </svg>
  <svg width="3"
       height="4.464101615137757"
       viewbox="0 0 3 4.464101615137757"
       style="position: absolute; overflow: visible; pointer-events: none; left: 33.5px; top: 11.5385px;"
  >
    <line x1="2.5"
          y1="3.964101615137757"
          x2="0.5"
          y2="0.5"
          stroke-width="1"
          stroke="var(--cmpui-border-color)"
    >
    </line>
  </svg>
  <svg width="1.000000000000007"
       height="5"
       viewbox="0 0 1.000000000000007 5"
       style="position: absolute; overflow: visible; pointer-events: none; left: 63.5px; top: 3.5px;"
  >
    <line x1="0.5000000000000071"
          y1="4.5"
          x2="0.5"
          y2="0.5"
          stroke-width="1"
          stroke="var(--cmpui-border-color)"
    >
    </line>
  </svg>
  <svg width="3"
       height="4.46410161513775"
       viewbox="0 0 3 4.46410161513775"
       style="position: absolute; overflow: visible; pointer-events: none; left: 91.5px; top: 11.5385px;"
  >
    <line x1="0.5"
          y1="3.96410161513775"
          x2="2.5"
          y2="0.5"
          stroke-width="1"
          stroke="var(--cmpui-border-color)"
    >
    </line>
  </svg>
  <svg width="4.46410161513775"
       height="3"
       viewbox="0 0 4.46410161513775 3"
       style="position: absolute; overflow: visible; pointer-events: none; left: 111.997px; top: 33.5px;"
  >
    <line x1="0.5"
          y1="2.5"
          x2="3.96410161513775"
          y2="0.5"
          stroke-width="1"
          stroke="var(--cmpui-border-color)"
    >
    </line>
  </svg>
  <svg width="63"
       height="1"
       viewbox="0 0 63 1"
       style="position: absolute; overflow: visible; pointer-events: none; left: 63.5px; top: 63.5px;"
  >
    <line x1="0.5"
          y1="0.5"
          x2="62.5"
          y2="0.5"
          stroke-width="1"
          stroke="var(--cmpui-primary-color)"
    >
    </line>
  </svg>
  <div x="126"
       y="64"
       class="cmpui_circle__root cmpui_angle-input__nob"
       style="--cmpui-circle-nob-radius: 12px; --cmpui-circle-nob-stroke-width: 0px; left: 114px; top: 52px;"
  >
  </div>
  <div x="64"
       y="64"
       class="cmpui_circle__root"
       style="--cmpui-circle-nob-fill: var(--cmpui-primary-color); --cmpui-circle-nob-radius: 2px; --cmpui-circle-nob-stroke-color: transparent; --cmpui-circle-nob-stroke-width: 0px; border: 0px solid transparent; left: 62px; top: 62px;"
  >
  </div>
</div>
`;

exports[`Components/Form/AngleInput Step smoke-test 1`] = `
<div class="cmpui_angle-input__root"
     style="width: 64px; height: 64px;"
>
  <svg width="64"
       height="64"
       viewbox="0 0 64 64"
  >
    <circle cx="32"
            cy="32"
            r="31"
            stroke="var(--cmpui-border-color)"
            fill="none"
            stroke-width="1"
    >
    </circle>
  </svg>
  <svg width="5"
       height="1"
       viewbox="0 0 5 1"
       style="position: absolute; overflow: visible; pointer-events: none; left: 55.5px; top: 31.5px;"
  >
    <line x1="0.5"
          y1="0.5"
          x2="4.5"
          y2="0.5"
          stroke-width="1"
          stroke="var(--cmpui-border-color)"
    >
    </line>
  </svg>
  <svg width="3.8284271247461916"
       height="3.8284271247461916"
       viewbox="0 0 3.8284271247461916 3.8284271247461916"
       style="position: absolute; overflow: visible; pointer-events: none; left: 48.4706px; top: 48.4706px;"
  >
    <line x1="0.5"
          y1="0.5"
          x2="3.3284271247461916"
          y2="3.3284271247461916"
          stroke-width="1"
          stroke="var(--cmpui-border-color)"
    >
    </line>
  </svg>
  <svg width="1"
       height="5"
       viewbox="0 0 1 5"
       style="position: absolute; overflow: visible; pointer-events: none; left: 31.5px; top: 55.5px;"
  >
    <line x1="0.5"
          y1="0.5"
          x2="0.5"
          y2="4.5"
          stroke-width="1"
          stroke="var(--cmpui-border-color)"
    >
    </line>
  </svg>
  <svg width="3.828427124746188"
       height="3.8284271247461916"
       viewbox="0 0 3.828427124746188 3.8284271247461916"
       style="position: absolute; overflow: visible; pointer-events: none; left: 11.701px; top: 48.4706px;"
  >
    <line x1="3.328427124746188"
          y1="0.5"
          x2="0.5"
          y2="3.3284271247461916"
          stroke-width="1"
          stroke="var(--cmpui-border-color)"
    >
    </line>
  </svg>
  <svg width="5"
       height="1"
       viewbox="0 0 5 1"
       style="position: absolute; overflow: visible; pointer-events: none; left: 3.5px; top: 31.5px;"
  >
    <line x1="4.5"
          y1="0.5"
          x2="0.5"
          y2="0.5"
          stroke-width="1"
          stroke="var(--cmpui-border-color)"
    >
    </line>
  </svg>
  <svg width="3.8284271247461916"
       height="3.828427124746188"
       viewbox="0 0 3.8284271247461916 3.828427124746188"
       style="position: absolute; overflow: visible; pointer-events: none; left: 11.701px; top: 11.701px;"
  >
    <line x1="3.3284271247461916"
          y1="3.328427124746188"
          x2="0.5"
          y2="0.5"
          stroke-width="1"
          stroke="var(--cmpui-border-color)"
    >
    </line>
  </svg>
  <svg width="1"
       height="5"
       viewbox="0 0 1 5"
       style="position: absolute; overflow: visible; pointer-events: none; left: 31.5px; top: 3.5px;"
  >
    <line x1="0.5"
          y1="4.5"
          x2="0.5"
          y2="0.5"
          stroke-width="1"
          stroke="var(--cmpui-border-color)"
    >
    </line>
  </svg>
  <svg width="3.8284271247461916"
       height="3.8284271247461916"
       viewbox="0 0 3.8284271247461916 3.8284271247461916"
       style="position: absolute; overflow: visible; pointer-events: none; left: 48.4706px; top: 11.701px;"
  >
    <line x1="0.5"
          y1="3.3284271247461916"
          x2="3.3284271247461916"
          y2="0.5"
          stroke-width="1"
          stroke="var(--cmpui-border-color)"
    >
    </line>
  </svg>
  <svg width="31"
       height="1"
       viewbox="0 0 31 1"
       style="position: absolute; overflow: visible; pointer-events: none; left: 31.5px; top: 31.5px;"
  >
    <line x1="0.5"
          y1="0.5"
          x2="30.5"
          y2="0.5"
          stroke-width="1"
          stroke="var(--cmpui-primary-color)"
    >
    </line>
  </svg>
  <div x="62"
       y="32"
       class="cmpui_circle__root cmpui_angle-input__nob"
       style="--cmpui-circle-nob-radius: 8px; --cmpui-circle-nob-stroke-width: 0px; left: 54px; top: 24px;"
  >
  </div>
  <div x="32"
       y="32"
       class="cmpui_circle__root"
       style="--cmpui-circle-nob-fill: var(--cmpui-primary-color); --cmpui-circle-nob-radius: 2px; --cmpui-circle-nob-stroke-color: transparent; --cmpui-circle-nob-stroke-width: 0px; border: 0px solid transparent; left: 30px; top: 30px;"
  >
  </div>
</div>
`;
